--- a/style.less
+++ b/style.less
@@ -1,13 +1,11 @@
 .divided_left{
   box-shadow: 0 0 0 2px #000;
-  border:5px solid #888;
+
   .left{
     background: #aaa;
-    border:2px solid #000;
   }
   .right{
     background: #aaa;
-    border:2px solid #000;
   }
 }
 
@@ -19,7 +17,7 @@
 
   cursor: e-resize;
 
-  width: 6px;
+  width: 6px;/*
   &:after,&:before{
     position: absolute;
     display: block;
@@ -31,7 +29,7 @@
     opacity: 0;
   }
   &:after{left: 100%;}
-  &:before{right: 100%;}
+  &:before{right: 100%;}*/
 
   background: #888;
 }
