--- a/style.less
+++ b/style.less
@@ -17,7 +17,7 @@
 
   cursor: e-resize;
 
-  width: 6px;/*
+  width: 6px;
   &:after,&:before{
     position: absolute;
     display: block;
@@ -29,7 +29,7 @@
     opacity: 0;
   }
   &:after{left: 100%;}
-  &:before{right: 100%;}*/
+  &:before{right: 100%;}
 
   background: #888;
 }
