--- a/style.less
+++ b/style.less
@@ -1,11 +1,14 @@
-@splitter_width : 5px;
+@splitter_width : 2px;
 
 .divider_vertical, .divider_horizontal{
   background: #888;
+  &.dragged{
+    background: #f00;
+  }
 }
 
 .divider_vertical{width: @splitter_width;cursor: ew-resize;}
 .divider_horizontal{height:@splitter_width;cursor: ns-resize;}
 
-// Uncomment if you want invisible clickable paddings around splitters (useful for thin splitters)
-// @import "paddings";
+// Comment if you don't want invisible clickable paddings around splitters (useful for thin splitters)
+@import "paddings";
