@splitter_width -> @divider_width

--- a/paddings.less
+++ b/paddings.less
@@ -1,4 +1,4 @@
-@padding_width : @splitter_width * 2;
+@padding_width : @divider_width * 2;
 
 .divider_vertical, .divider_horizontal{
   &:after,&:before{
