--- a/style.less
+++ b/style.less
@@ -1,4 +1,4 @@
-@splitter_width : 2px;
+@divider_width : 2px;
 
 .divider_vertical, .divider_horizontal{
   background: #888;
@@ -7,8 +7,8 @@
   }
 }
 
-.divider_vertical{width: @splitter_width;cursor: ew-resize;}
-.divider_horizontal{height:@splitter_width;cursor: ns-resize;}
+.divider_vertical{width: @divider_width;cursor: ew-resize;}
+.divider_horizontal{height: @divider_width;cursor: ns-resize;}
 
 // Comment if you don't want invisible clickable paddings around splitters (useful for thin splitters)
 @import "paddings";
